crates/rspack_loader_swc/src/rsc_transforms/tests/fixture/errors/server-actions/server-graph/32/input.js
'use server'

export default 1
